add[hwameistor-ui]: add hwameistor-ui dashboard interface
