# docs/swagger.yaml
@@ -661,7 +661,7 @@ paths:
       summary: 摘要 获取组件状态监控指标
       tags:
       - Metric
-  /metrics/nodestorageusemetric/:storagepoolclass:
+  /metrics/nodestorageusemetric/:StoragePoolClass:
     get:
       consumes:
       - application/json
@@ -702,7 +702,7 @@ paths:
       summary: 摘要 获取操作记录列表
       tags:
       - Metric
-  /metrics/storagepoolmetric:
+  /metrics/storagepoolusemetric:
     get:
       consumes:
       - application/json
